--- a/client/src/sass/abstracts/_mixins.scss
+++ b/client/src/sass/abstracts/_mixins.scss
@@ -12,6 +12,11 @@
     align-items: center;
     justify-content: space-around;
 }
+@mixin flexJustifyBetween {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 @mixin absoluteCenter {
     position: absolute;
     top: 50%;
