--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -11,5 +11,10 @@
 @import './components/icobutton';
 @import './components/textbutton';
 @import './components/footer';
+@import './components/signup';
+@import './models/rootmodel';
+@import './components/input';
+@import './components/emailinput';
+@import './components/inputform';
 
 @import './pages/loginpage';
