--- a/client/src/sass/components/_signup.scss
+++ b/client/src/sass/components/_signup.scss
@@ -8,4 +8,18 @@
     .signup-heading{
         color: $color-grey-2;
     }
+
+    .singup-option-container{
+        margin-top: 1.5rem;
+
+        .signup-option{
+            background-color: transparent;
+            justify-content: flex-start;
+            padding: 0;
+        }
+    }
+
+    .signup-form-submit-btn{
+        margin-top: 2rem;
+    }
 }
