--- a/client/src/sass/abstracts/_typography.scss
+++ b/client/src/sass/abstracts/_typography.scss
@@ -49,3 +49,8 @@
     color: $color-secondary-light;
     cursor: pointer;
   }
+  
+  .btn-disabled{
+    opacity: 0.5;
+    pointer-events: none;
+  }
