--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -15,5 +15,6 @@
 @import './models/rootmodel';
 @import './components/input';
 @import './components/inputform';
+@import './components/simplespinner';
 
 @import './pages/loginpage';
