--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -16,5 +16,6 @@
 @import './components/input';
 @import './components/inputform';
 @import './components/simplespinner';
+@import './components/defaultloading';
 
 @import './pages/loginpage';
