--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -17,5 +17,7 @@
 @import './components/inputform';
 @import './components/simplespinner';
 @import './components/defaultloading';
-
+@import './components/desktopheader';
+@import './components/login';
 @import './pages/loginpage';
+@import './pages/Homepage.scss';
