--- a/client/src/sass/components/_desktopheader.scss
+++ b/client/src/sass/components/_desktopheader.scss
@@ -1,4 +1,4 @@
-.desktop-header{
+.desktop-header {
     position: relative;
     height: 100%;
     width: 25%;
@@ -7,54 +7,145 @@
     flex-direction: column;
     align-items: flex-end;
     font-size: 1.3rem;
-.sidebar{
-    position: fixed;
-    background-color: #fff;
-    height: 100%;
-    flex: 1;
-    width: 250px;
-    .header-logo-container{
-        .twitter-logo-container{
-            display: inline-block;
-            padding: 0 0.5rem;
-            cursor: pointer;
+
+    .sidebar {
+        position: fixed;
+        background-color: #fff;
+        height: 100%;
+        flex: 1;
+        width: 250px;
+        display: flex;
+        flex-direction: column;
+
+        .header-logo-container {
+            .twitter-logo-container {
+                display: inline-block;
+                padding: 0 0.5rem;
+                cursor: pointer;
+            }
+
+            .fa-twitter {
+                font-size: 2rem;
+            }
         }
-        .fa-twitter{
-            font-size: 2rem;
+
+        .header-link {
+            display: block;
+            margin: 0.5rem 0;
+
+            &:hover .header-link-icon-wrap {
+                background-color: $color-grey-2;
+            }
+
+            .header-link-icon-wrap {
+                display: inline-flex;
+                align-items: center;
+                transition: all 500ms ease-in-out;
+                padding: 0.5rem 0.7rem 0.5rem 0.5rem;
+                border-radius: 20px;
+
+            }
+
+
+            .link-icon {
+                margin-right: 1rem;
+            }
         }
-    }
-    .header-link{
-        display: block;
-        margin: 0.5rem 0;
-        &:hover .header-link-icon-wrap{
-            background-color: $color-grey-2;
+
+        .header-container {
+            margin-bottom: 1rem;
+
+            &:focus-within+.logout-options {
+                display: block;
+            }
         }
-        .header-link-icon-wrap{
-            display: inline-flex;
+
+        .tweet-btn-container {
+            .tweet-btn {
+                width: 90%;
+                margin: 0;
+                font-size: large;
+
+            }
+        }
+
+        .header-profile-wrap {
+            margin-top: auto;
+            position: relative;
+
+            .logout-options {
+                display: none;
+                cursor: auto;
+                position: absolute;
+                bottom: calc(100% + 20px);
+                width: calc(100% + 2rem);
+                transform: translate(-50%);
+                left: 50%;
+                height: auto;
+                background-color: #fff;
+                border-radius: 10px;
+                padding: 0.5rem;
+                align-items: flex-start;
+                z-index: 10;
+                box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
+
+                .logout-btn-container {
+                    .logout-btn {
+                        width: unset;
+                        margin: 0;
+                        border: 0;
+                        min-height: unset;
+                    }
+                }
+
+            }
+        }
+
+        .header-profile {
+            display: flex;
             align-items: center;
+            font-size: 14px;
+            padding: 0.5rem;
+            height: auto;
+            border-radius: 50px;
             transition: all 500ms ease-in-out;
-            padding: 0.5rem 0.7rem 0.5rem 0.5rem;
-            border-radius: 20px;
-            
-        }
-        
-        
-        .link-icon{
-            margin-right: 1rem;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $color-grey-2;
+            }
+
+            .profile-pic-container {
+                margin-right: 1rem;
+                width: 20%;
+
+                .profile-pic {
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 100%;
+                    object-fit: cover;
+                    background-color: $color-grey-1;
+                }
+            }
+
+            .profile-details {
+                width: 60%;
+                margin-right: 1rem;
+
+                .user-fullname {
+                    font-weight: 700;
+                }
+
+                .user-username {
+                    color: $color-grey-1;
+                }
+            }
+
+            .profile-options {
+                width: 20%;
+            }
         }
     }
-    .header-conatiner{
-        margin-bottom: 1rem;
-    }
-    .tweet-btn-container{
-        .tweet-btn{
-            width: 90%;
-            margin: 0;
-            font-size: large;
-            
-        }
-    }
-}
 
 
 }
