--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -19,5 +19,6 @@
 @import './components/defaultloading';
 @import './components/desktopheader';
 @import './components/login';
+@import './components/sendtweet';
 @import './pages/loginpage';
 @import './pages/Homepage.scss';
