tweet comp finished

--- a/client/src/sass/components/_desktopheader.scss
+++ b/client/src/sass/components/_desktopheader.scss
@@ -65,7 +65,8 @@
                 width: 90%;
                 margin: 0;
                 font-size: large;
-
+                background-color: $color-secondary-light;
+                color: $color-white;
             }
         }
 
