--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -20,5 +20,6 @@
 @import './components/desktopheader';
 @import './components/login';
 @import './components/sendtweet';
+@import './pages/composetweetpage';
 @import './pages/loginpage';
-@import './pages/Homepage.scss';
+@import './pages/homepage';
