--- a/client/src/sass/components/_sendtweet.scss
+++ b/client/src/sass/components/_sendtweet.scss
@@ -28,7 +28,7 @@
         }
         
         .whats-happening{
-            width: 100%;
+            flex-grow: 1;
             
             
             .tweet-input-container{
@@ -40,10 +40,10 @@
                     border: 0;
                     outline: 0;
                     // padding: 1rem 0.5rem;
-                    width: 100%;
+                    flex-grow: 1;
                     height: 100%;
                     &::placeholder{
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                         font-weight: 600;
                         color: $color-grey-1;
                         
@@ -57,7 +57,22 @@
                 .icon-containers{
                     @include flexCenter;
                     .icon-container{
-                        margin-right: 0.5rem;
+                        @include flexJustifyCenter;
+                        margin-right: 0.3rem;
+                        height: 34px;
+                        width: 34px;
+                        border-radius: 100%;
+                        transition: all 500ms ease-in-out;
+                        cursor: pointer;
+                        &:hover{
+                            background-color: rgba(29, 155, 240,0.1);
+                        }
+                        
+                    }
+                    .icon-disabled{
+                        
+                        pointer-events: none;
+                        opacity: 0.5;
                     }
                 }
                 .send-tweet-btn-container{
