--- a/client/src/sass/models/_rootmodel.scss
+++ b/client/src/sass/models/_rootmodel.scss
@@ -1,4 +1,4 @@
-.root-model-wrap{
+.root-model-wrap {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -6,34 +6,41 @@
     right: 0;
     z-index: 100;
     width: 100%;
-    background-color: rgba(#333,0.8);
+    background-color: rgba(#333, 0.8);
     @include flexJustifyCenter;
 }
 
-.root-model{
+.root-model {
     background-color: $color-black;
     padding: 1rem;
     height: 100%;
     width: 100%;
-    
-    @include for-tablet-portrait-up{
+
+    @include for-tablet-portrait-up {
         max-width: 600px;
         max-height: 600px;
         margin: auto;
         border-radius: 10px;
+        height: auto;
     }
 
-    .root-model-header{
+    .root-model-header {
         @include flexJustifyBetween;
 
-        .root-model-header-icon-container{
+        .root-model-header-icon-container {
             font-size: $icon-small-size;
             color: $color-grey-2;
         }
-        .model-close-btn{
+
+        .model-close-btn {
             color: $color-grey-2;
             cursor: pointer;
-            font-size:1.2rem;
+            font-size: 1.2rem;
         }
     }
+}
+
+.bcWhite {
+    background-color: #fff;
+
 }
