--- a/client/src/sass/components/_textbutton.scss
+++ b/client/src/sass/components/_textbutton.scss
@@ -1,6 +1,6 @@
 .text-button{
     position: relative;
-    width: 300px;
+    width: 100%;
     min-height: 40px;
     cursor: pointer;
     border: 0;
