--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -20,6 +20,8 @@
 @import './components/desktopheader';
 @import './components/login';
 @import './components/sendtweet';
+@import './components/tweet';
+@import './components/tweetsections';
 @import './pages/composetweetpage';
 @import './pages/loginpage';
 @import './pages/homepage';
