working on news feed

--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -1,6 +1,6 @@
 .tweet {
     cursor: pointer;
-    margin: 1rem 0;
+    margin-bottom: 1rem;
     padding: 0.5rem;
     display: flex;
     align-items: flex-start;
