--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -22,6 +22,7 @@
 @import './components/sendtweet';
 @import './components/tweet';
 @import './components/retweet';
+@import './components/searchbar';
 @import './components/tweetsections';
 @import './pages/composetweetpage';
 @import './pages/loginpage';
