--- a/client/src/sass/components/_tweetsections.scss
+++ b/client/src/sass/components/_tweetsections.scss
@@ -1,7 +1,26 @@
-.tweet-sections{
-    
-    .tweets{
-        border: 1px solid $color-grey-2;
-        margin-top: 0.5rem;
+.tweets-search-news-sections {
+    display: flex;
+    align-items: flex-start;
+
+    .tweet-sections {
+
+        .tweets {
+            border: 1px solid $color-grey-2;
+            margin-top: 0.5rem;
+        }
+    }
+    .sidebar{
+        margin-left: 1rem;
+        width:45%;
+        .news-section{
+            height: 500px;
+            background-color: #fff;
+            width: 100%;
+            margin-top: 1.5rem;
+            border-radius: 20px;
+        }
+    }
+    .searchbar-news-sections-wrap{
+        width: 350px;
     }
 }
