working on follow user suggetions

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import './components/tweet';
 @import './components/retweet';
 @import './components/searchbar';
+@import './components/news';
 @import './components/tweetsections';
 @import './pages/composetweetpage';
 @import './pages/loginpage';
