finished home page clone

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $color-grey-1: #999;
 $color-grey-2: #dbdbdb;
 $color-grey-3: #fafafa;
 $color-grey-4: #efefef;
+$color-grey-5: rgb(247, 249, 249);
 
 $color-secondary: #0056B3;
 $color-secondary-light: rgb(29, 155, 240);
