--- a/client/src/sass/components/_news.scss
+++ b/client/src/sass/components/_news.scss
@@ -1,6 +1,6 @@
 .news-section {
     min-height: 500px;
-    background-color: #EFF3F4;
+    background-color: $color-grey-5;
     width: 100%;
     margin-top: 1.5rem;
     border-radius: 20px;
