--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -23,8 +23,10 @@
 @import './components/tweet';
 @import './components/retweet';
 @import './components/searchbar';
+@import './components/followuser';
 @import './components/news';
 @import './components/tweetsections';
+@import './components/whotofollow';
 @import './pages/composetweetpage';
 @import './pages/loginpage';
 @import './pages/homepage';
