--- a/client/src/sass/components/_desktopheader.scss
+++ b/client/src/sass/components/_desktopheader.scss
@@ -128,8 +128,7 @@
             // outline: 0;
             // background-color: transparent;
             // border: 0;
-            display: flex;
-            align-items: center;
+            @include flexCenter;
             font-size: 14px;
             padding: 0.5rem;
             height: auto;
