working on user profile section

--- a/client/src/sass/components/_desktopheader.scss
+++ b/client/src/sass/components/_desktopheader.scss
@@ -51,6 +51,12 @@
                 margin-right: 1rem;
             }
         }
+        .active-header-link{
+            .header-link-icon-wrap{
+                font-weight: 700;
+        }
+            }
+            
 
         .activeRoute {
             background-color: #333;
