profile section alomost finished

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $color-white: #fff;
 $color-black: #262626;
 $color-black-grey: #333;
+$color-black-2: #0F1419;
 $color-black-secondary:#536471;
 $color-red: #ed4956;
 
