--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -5,25 +5,36 @@
   padding: 0;
   box-sizing: border-box;
 }
-html,body,#root{
+
+html,
+body,
+#root {
   height: 100%;
   width: 100%;
 }
+
 body {
-    box-sizing: border-box;
-    background-color: #fff;
-    color: $color-black;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-a{
+  box-sizing: border-box;
+  background-color: #fff;
+  color: $color-black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+  overflow: hidden;
+}
+
+a {
   color: $color-black;
   text-decoration: none;
 }
-  .dark{
-    color: #fff;
-    background-color: #333;
-  }
- .dark .button{
-   color: $color-black;
+
+.dark {
+  color: #fff;
+  background-color: #333;
+}
+
+.dark .button {
+  color: $color-black;
   background-color: #fff;
- }
+}
