--- a/client/src/sass/components/_searchbar.scss
+++ b/client/src/sass/components/_searchbar.scss
@@ -1,12 +1,16 @@
 .searchbar {
     position: relative;
     height: 45px;
+    background-color: rgba(255, 255, 255, 0.85);
+    backdrop-filter: blur(12px);
+    position: sticky;
+    top: 0;
+    z-index: 100;
     .search-input-label {
         @include flexCenter;
         background-color: $color-grey-5;
         border-radius: 25px;
-        height: 45px;
-        position: fixed;
+        height: 40px;
         width: 350px;
         .wrap-search-input {
             flex-grow: 1;
