--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -25,7 +25,6 @@
             margin-top: 1rem;
             width: 100%;
             max-width: 500px;
-            margin: auto;
             margin-top: 1rem;
 
             .tweet-content-image {
@@ -103,7 +102,7 @@
 
         .tweet-text {
             font-size: 15px;
-            color: $color-black-grey;
+            color: $color-black-2;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
@@ -227,9 +226,9 @@
                 }
 
                 .like-icon {
-                    font-size: 1.2rem;
+                    font-size: 18px;
                     transition: all 500ms ease-in-out;
-                    color: $color-grey-1;
+                    color: #536471;
                     &:hover {
                         transform: scale(1.1);
                     }
