--- a/client/src/sass/components/_userheader.scss
+++ b/client/src/sass/components/_userheader.scss
@@ -1,7 +1,7 @@
 .user-header-container {
     position: sticky;
-    top: 8px;
-    
+    top: 0px;
+    z-index: 100;
     .user-header {
         background-color: rgba(255, 255, 255, 0.85);
         display: flex;
