--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import './components/desktopheader';
 @import './components/login';
 @import './components/sendtweet';
+@import './components/sendtweetheader';
 @import './components/tweet';
 @import './components/retweet';
 @import './components/searchbar';
