--- a/client/src/sass/pages/_homepage.scss
+++ b/client/src/sass/pages/_homepage.scss
@@ -3,12 +3,13 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    padding: 0.5rem 0;
+    padding-top: 0.5rem;
     .main{
-        width: 70%;
+        width: 75%;
         height: 100%;
         background-color: darkgrey;
         .main-wrapper{
+            overflow: auto;
             display: flex;
             align-items: flex-start;
             width: 100%;
