--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -33,5 +33,6 @@
 @import './components/user';
 
 @import './pages/composetweetpage';
+@import './pages/bookmarkspage';
 @import './pages/loginpage';
 @import './pages/homepage';
