--- a/client/src/sass/components/_sendtweet.scss
+++ b/client/src/sass/components/_sendtweet.scss
@@ -33,17 +33,19 @@
             
             .tweet-input-container{
                 width: 100%;
-                height: 48px;
                 display: flex;
                 align-items: center;
                 .tweet-input{
+                    font-size: 1.3rem;
+                    overflow: hidden;
+                    resize: none;
                     border: 0;
                     outline: 0;
                     // padding: 1rem 0.5rem;
                     flex-grow: 1;
                     height: 100%;
                     &::placeholder{
-                        font-size: 1rem;
+                        font-size: 1.2rem;
                         font-weight: 600;
                         color: $color-grey-1;
                         
