--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -35,4 +35,5 @@
 @import './pages/composetweetpage';
 @import './pages/bookmarkspage';
 @import './pages/loginpage';
+@import './pages/followpage';
 @import './pages/homepage';
