--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -34,6 +34,8 @@
 
 @import './pages/composetweetpage';
 @import './pages/bookmarkspage';
+@import './pages/notificationpage';
 @import './pages/loginpage';
 @import './pages/followpage';
 @import './pages/homepage';
+@import './pages/settingspage';
