--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -70,7 +70,7 @@
                         @include flexCenter;
                         .tweet-options-model-icon{
                             font-size: 1.2rem;
-                            color: $color-black-2;
+                            color: #536471;
                             margin-left: 0.5rem;
                         }
                         .icon-4{
