--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -30,6 +30,7 @@
 @import './components/tweetsections';
 @import './components/whotofollow';
 @import './components/userheader';
+@import './components/editprofile';
 @import './components/user';
 
 @import './pages/composetweetpage';
