working on followers and following

--- a/client/src/sass/components/_user.scss
+++ b/client/src/sass/components/_user.scss
@@ -2,8 +2,8 @@
     background-color: #fff;
 
     .user-section {
-        height: 100%;
-        height: auto;
+        align-self: stretch;
+        position: relative;
 
         .bc-image-container {
             width: 100%;
