--- a/client/src/sass/pages/_followpage.scss
+++ b/client/src/sass/pages/_followpage.scss
@@ -70,4 +70,9 @@
             }
         }
     }
+    .user-followers .no-followers,.user-followings .no-followings{
+        text-align: center;
+        font-size: 1.2rem;
+        margin-top: 1rem;
+    }
 }
