--- a/client/src/sass/components/_user.scss
+++ b/client/src/sass/components/_user.scss
@@ -8,7 +8,7 @@
         .bc-image-container {
             width: 100%;
             height: 200px;
-
+            position: relative;
             .bc-image {
                 @include fullWidthHeightCoverImage;
             }
