--- a/client/src/sass/components/_simplespinner.scss
+++ b/client/src/sass/components/_simplespinner.scss
@@ -1,7 +1,9 @@
 .loader-wrap{
   @include containCenter;
 }
-
+.topCenter{
+  align-items: unset;
+}
 .loader {
     border: 4px solid #f3f3f3;
     border-radius: 50%;
