--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: flex-start;
     transition: all 500ms ease-in-out;
-    
+
     &:hover {
         background-color: rgba(#dbdbdb, 0.3);
     }
@@ -19,6 +19,7 @@
     }
 
     .tweet-content {
+        margin-left: 0.5rem;
         flex-grow: 1;
 
         .tweet-content-image-container {
@@ -40,13 +41,14 @@
             margin-right: 0.5rem;
         }
 
-        .tweet-content-header,.save-tweet-options{
+        .tweet-content-header,
+        .save-tweet-options {
             @include flexCenter;
 
             .tweet-options-container {
                 position: relative;
                 margin-left: auto;
-                
+
                 .tweet-options {
 
                     .tweet-options-icon {
@@ -64,23 +66,28 @@
                     right: 0;
                     top: 0;
                     box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
-                    .tweet-options-model-item{
+
+                    .tweet-options-model-item {
                         transition: all 500ms ease-in-out;
                         padding: 0.5rem 0.2rem;
                         @include flexCenter;
-                        .tweet-options-model-icon{
+
+                        .tweet-options-model-icon {
                             font-size: 1.2rem;
                             color: #536471;
                             margin-left: 0.5rem;
                         }
-                        .icon-4{
+
+                        .icon-4 {
                             transform: rotateY(180deg);
                         }
-                        &:hover{
+
+                        &:hover {
                             background-color: $color-grey-2;
                         }
                     }
-                    .tweet-options-model-btn{
+
+                    .tweet-options-model-btn {
                         background-color: transparent;
                         justify-content: unset;
                         color: $color-black-2;
@@ -88,7 +95,8 @@
                         padding: 0.5rem 0.7rem;
                     }
                 }
-                .show{
+
+                .show {
                     display: block;
                 }
             }
@@ -121,10 +129,10 @@
         }
 
         .useless-dot {
-            height: 5px;
-            width: 5px;
+            height: 3px;
+            width: 3px;
             border-radius: 100%;
-            background-color: $color-grey-1;
+            background-color: $color-secondary;
 
         }
 
@@ -210,6 +218,7 @@
 
                 .tweet-icon {
                     @include flexJustifyCenter;
+                    color: #536471;
                     margin-right: 0.5rem;
                     height: 25px;
                     width: 25px;
@@ -228,22 +237,47 @@
                 .like-icon {
                     font-size: 18px;
                     transition: all 500ms ease-in-out;
-                    color: #536471;
-                    &:hover {
-                        transform: scale(1.1);
+
+                    @keyframes pulse {
+                        0% {
+                            transform: scale(1);
+                        }
+
+                        50% {
+                            transform: scale(1.3);
+                        }
+
+                        80% {
+                            transform: scale(0.8);
+                        }
+
+                        100% {
+                            transform: scale(1);
+                        }
                     }
+
+                    .liked {
+                        color: $color-red;
+                        animation-name: pulse;
+                        animation-duration: 0.3s;
+                        animation-iteration-count: 1;
+                    }
+
+
                 }
             }
-            .save-tweet-options{
-                .save-options{
+
+            .save-tweet-options {
+                .save-options {
                     min-width: 200px;
-                    .tweet-options-model-item{
+
+                    .tweet-options-model-item {
                         padding: 0.1rem;
                     }
                 }
             }
-            
+
         }
-        
+
     }
 }
