--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -1,4 +1,5 @@
-.tweet {
+.tweet-link{
+    .tweet {
     cursor: pointer;
     margin-bottom: 1rem;
     padding: 0.5rem;
@@ -280,4 +281,5 @@
         }
 
     }
+}
 }
