--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -39,6 +39,7 @@
 @import './pages/notificationpage';
 @import './pages/loginpage';
 @import './pages/followpage';
+@import './pages/tweetpage';
 @import './pages/homepage';
 @import './pages/settingspage';
 
