--- a/client/src/sass/pages/_composetweetpage.scss
+++ b/client/src/sass/pages/_composetweetpage.scss
@@ -13,7 +13,7 @@
         }
     }
     .tweet-header{
-        color: $color-grey-1;
+        color: $color-black;
         font-size: 1.2rem;
         .close-btn{
             cursor: pointer;
