--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -1,285 +1,287 @@
-.tweet-link{
+.tweet-link {
     .tweet {
-    cursor: pointer;
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-    display: flex;
-    align-items: flex-start;
-    transition: all 500ms ease-in-out;
+        cursor: pointer;
+        margin-bottom: 1rem;
+        padding: 0.5rem;
+        display: flex;
+        align-items: flex-start;
+        transition: all 500ms ease-in-out;
 
-    &:hover {
-        background-color: rgba(#dbdbdb, 0.3);
-    }
-
-    .profile-pic-container {
-        .profile-pic {
-            height: 48px;
-            width: 48px;
-            border-radius: 100%;
+        &:hover {
+            background-color: rgba(#dbdbdb, 0.3);
         }
-    }
 
-    .tweet-content {
-        margin-left: 0.5rem;
-        flex-grow: 1;
-
-        .tweet-content-image-container {
-            margin-top: 1rem;
-            width: 100%;
-            max-width: 500px;
-            margin-top: 1rem;
-
-            .tweet-content-image {
-                height: auto;
-                width: 100%;
-                object-fit: cover;
-                border-radius: 20px;
-                max-height: 500px;
+        .profile-pic-container {
+            .profile-pic {
+                height: 48px;
+                width: 48px;
+                border-radius: 100%;
             }
         }
 
-        .tweet-content-child {
-            margin-right: 0.5rem;
-        }
+        .tweet-content {
+            margin-left: 0.5rem;
+            flex-grow: 1;
 
-        .tweet-content-header,
-        .save-tweet-options {
-            @include flexCenter;
+            .tweet-content-image-container {
+                margin-top: 1rem;
+                width: 100%;
+                max-width: 500px;
+                margin-top: 1rem;
 
-            .tweet-options-container {
-                position: relative;
-                margin-left: auto;
+                .tweet-content-image {
+                    height: auto;
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 20px;
+                    max-height: 500px;
+                }
+            }
 
-                .tweet-options {
+            .tweet-content-child {
+                margin-right: 0.5rem;
+            }
 
-                    .tweet-options-icon {
-                        height: 20px;
-                        width: 20px;
+            .tweet-content-header,
+            .save-tweet-options {
+                @include flexCenter;
+
+                .tweet-options-container {
+                    position: relative;
+                    margin-left: auto;
+
+                    .tweet-options {
+
+                        .tweet-options-icon {
+                            height: 20px;
+                            width: 20px;
+                        }
+                    }
+
+                    .tweet-options-model {
+                        display: none;
+                        background-color: $color-white;
+                        min-width: 300px;
+                        list-style: none;
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                        z-index: 100;
+                        box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
+
+                        .tweet-options-model-item {
+                            transition: all 500ms ease-in-out;
+                            padding: 0.5rem 0.2rem;
+                            @include flexCenter;
+
+                            .tweet-options-model-icon {
+                                font-size: 1.2rem;
+                                color: #536471;
+                                margin-left: 0.5rem;
+                            }
+
+                            .icon-4 {
+                                transform: rotateY(180deg);
+                            }
+
+                            &:hover {
+                                background-color: $color-grey-2;
+                            }
+                        }
+
+                        .tweet-options-model-btn {
+                            background-color: transparent;
+                            justify-content: unset;
+                            color: $color-black-2;
+                            align-items: unset;
+                            padding: 0.5rem 0.7rem;
+                            font-size: 15px;
+                        }
+                    }
+
+                    .show {
+                        display: block;
                     }
                 }
 
-                .tweet-options-model {
-                    display: none;
-                    background-color: $color-white;
-                    min-width: 300px;
-                    list-style: none;
+            }
+
+            .user-full-name {
+                font-size: 15px;
+                font-weight: 700;
+            }
+
+            .tweet-text {
+                font-size: 15px;
+                color: $color-black-2;
+                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            }
+
+            .user-username,
+            .timestamp {
+                color: $color-grey-1;
+                font-size: 14px;
+            }
+
+            .timestamp {
+                cursor: pointer;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
+            .useless-dot {
+                height: 3px;
+                width: 3px;
+                border-radius: 100%;
+                background-color: $color-secondary;
+
+            }
+
+            .tweet-options {
+                cursor: pointer;
+                border-radius: 100%;
+                height: 30px;
+                width: 30px;
+                @include flexJustifyCenter;
+
+                &:hover {
+                    background-color: rgba(29, 155, 240, 0.1);
+                }
+            }
+
+            .tweet-actions {
+                margin-top: 0.5rem;
+                @include flexCenter;
+
+                .tweet-retweet {
+                    position: relative;
+                }
+
+                .retweet-options {
+                    @include flexColumn;
+                    align-items: center;
                     position: absolute;
-                    right: 0;
-                    top: 0;
+                    top: 10%;
+                    left: 0;
+                    transform: translate(-50%);
+                    height: auto;
+                    width: 150px;
+                    background-color: rgba(255, 255, 255, 1.00);
                     box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
+                    display: none;
 
-                    .tweet-options-model-item {
-                        transition: all 500ms ease-in-out;
-                        padding: 0.5rem 0.2rem;
-                        @include flexCenter;
+                    .retweet-btn,
+                    .quote-btn {
+                        background-color: transparent;
+                        margin: 0;
+                        padding: 0;
 
-                        .tweet-options-model-icon {
-                            font-size: 1.2rem;
-                            color: #536471;
-                            margin-left: 0.5rem;
-                        }
-
-                        .icon-4 {
-                            transform: rotateY(180deg);
-                        }
-
-                        &:hover {
-                            background-color: $color-grey-2;
-                        }
                     }
 
-                    .tweet-options-model-btn {
-                        background-color: transparent;
-                        justify-content: unset;
-                        color: $color-black-2;
-                        align-items: unset;
-                        padding: 0.5rem 0.7rem;
+                    .quote-btn {
+                        cursor: not-allowed;
+
                     }
                 }
 
                 .show {
                     display: block;
                 }
-            }
 
-        }
-
-        .user-full-name {
-            font-size: 15px;
-            font-weight: 700;
-        }
-
-        .tweet-text {
-            font-size: 15px;
-            color: $color-black-2;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-
-        .user-username,
-        .timestamp {
-            color: $color-grey-1;
-            font-size: 14px;
-        }
-
-        .timestamp {
-            cursor: pointer;
-
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-
-        .useless-dot {
-            height: 3px;
-            width: 3px;
-            border-radius: 100%;
-            background-color: $color-secondary;
-
-        }
-
-        .tweet-options {
-            cursor: pointer;
-            border-radius: 100%;
-            height: 30px;
-            width: 30px;
-            @include flexJustifyCenter;
-
-            &:hover {
-                background-color: rgba(29, 155, 240, 0.1);
-            }
-        }
-
-        .tweet-actions {
-            margin-top: 0.5rem;
-            @include flexCenter;
-
-            .tweet-retweet {
-                position: relative;
-            }
-
-            .retweet-options {
-                @include flexColumn;
-                align-items: center;
-                position: absolute;
-                top: 10%;
-                left: 0;
-                transform: translate(-50%);
-                height: auto;
-                width: 150px;
-                background-color: rgba(255, 255, 255, 1.00);
-                box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
-                display: none;
-
-                .retweet-btn,
-                .quote-btn {
-                    background-color: transparent;
-                    margin: 0;
-                    padding: 0;
-
-                }
-
-                .quote-btn {
-                    cursor: not-allowed;
-
-                }
-            }
-
-            .show {
-                display: block;
-            }
-
-            .retweet-options-child {
-                @include flexCenter;
-                transition: all 500ms ease-in-out;
-                width: 100%;
-                padding: 0.5rem 1rem;
-
-                &:hover {
-                    background-color: $color-grey-2;
-                }
-
-                .fa-pencil-alt {
-                    font-size: 16px;
-                    color: $color-grey-1;
-                }
-            }
-
-            .tweet-actions-child {
-                cursor: pointer;
-                @include flexCenter;
-                margin-right: 3rem;
-
-                &:hover .tweet-comment-count {
-                    color: $color-secondary;
-                }
-
-                &:last-child {
-                    margin-left: auto;
-                }
-
-                .tweet-icon {
-                    @include flexJustifyCenter;
-                    color: #536471;
-                    margin-right: 0.5rem;
-                    height: 25px;
-                    width: 25px;
+                .retweet-options-child {
+                    @include flexCenter;
                     transition: all 500ms ease-in-out;
-                    border-radius: 100%;
+                    width: 100%;
+                    padding: 0.5rem 1rem;
 
                     &:hover {
-                        background-color: rgba(29, 155, 240, 0.2);
+                        background-color: $color-grey-2;
+                    }
+
+                    .fa-pencil-alt {
+                        font-size: 16px;
+                        color: $color-grey-1;
                     }
                 }
 
-                .tweet-comment-count {
-                    color: #536471;
-                }
+                .tweet-actions-child {
+                    cursor: pointer;
+                    @include flexCenter;
+                    margin-right: 3rem;
 
-                .like-icon {
-                    font-size: 18px;
-                    transition: all 500ms ease-in-out;
+                    &:hover .tweet-comment-count {
+                        color: $color-secondary;
+                    }
 
-                    @keyframes pulse {
-                        0% {
-                            transform: scale(1);
-                        }
+                    &:last-child {
+                        margin-left: auto;
+                    }
 
-                        50% {
-                            transform: scale(1.3);
-                        }
+                    .tweet-icon {
+                        @include flexJustifyCenter;
+                        color: #536471;
+                        margin-right: 0.5rem;
+                        height: 25px;
+                        width: 25px;
+                        transition: all 500ms ease-in-out;
+                        border-radius: 100%;
 
-                        80% {
-                            transform: scale(0.8);
-                        }
-
-                        100% {
-                            transform: scale(1);
+                        &:hover {
+                            background-color: rgba(29, 155, 240, 0.2);
                         }
                     }
 
-                    .liked {
-                        color: $color-red;
-                        animation-name: pulse;
-                        animation-duration: 0.3s;
-                        animation-iteration-count: 1;
+                    .tweet-comment-count {
+                        color: #536471;
                     }
 
+                    .like-icon {
+                        font-size: 18px;
+                        transition: all 500ms ease-in-out;
 
-                }
-            }
+                        @keyframes pulse {
+                            0% {
+                                transform: scale(1);
+                            }
 
-            .save-tweet-options {
-                .save-options {
-                    min-width: 200px;
+                            50% {
+                                transform: scale(1.3);
+                            }
 
-                    .tweet-options-model-item {
-                        padding: 0.1rem;
+                            80% {
+                                transform: scale(0.8);
+                            }
+
+                            100% {
+                                transform: scale(1);
+                            }
+                        }
+
+                        .liked {
+                            color: $color-red;
+                            animation-name: pulse;
+                            animation-duration: 0.3s;
+                            animation-iteration-count: 1;
+                        }
+
+
                     }
                 }
+
+                .save-tweet-options {
+                    .save-options {
+                        min-width: 200px;
+
+                        .tweet-options-model-item {
+                            padding: 0.1rem;
+                        }
+                    }
+                }
+
             }
 
         }
-
     }
-}
 }
